--- a/index.html
+++ b/index.html
@@ -25,39 +25,33 @@
       padding: 0;
       background: #000;
       font-family: system-ui, Segoe UI, Roboto, Inter, Arial;
-      color: var(--fg);
     }
     .arjs-loader {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(11, 16, 32, 0.8);
       display: flex;
       align-items: center;
       justify-content: center;
       z-index: 9999;
       color: #fff;
+      font-size: 1.1rem;
+      text-align: center;
     }
     .hud {
       position: fixed;
       inset: 0;
       pointer-events: none;
       z-index: 9990;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 10px;
     }
     .card {
+      pointer-events: auto;
       backdrop-filter: blur(8px);
       background: rgba(11, 16, 32, 0.6);
       border: 1px solid rgba(255, 255, 255, 0.08);
       border-radius: 14px;
       padding: 10px 12px;
-      margin-bottom: 10px;
       color: var(--fg);
-      width: 100%;
-      max-width: 400px;
     }
     .final {
       position: fixed;
@@ -80,8 +74,8 @@
       text-align: center;
     }
     @media (max-width: 520px) {
-      .card {
-        padding: 8px 10px;
+      .muted {
+        font-size: 0.8rem;
       }
     }
   </style>
@@ -93,27 +87,28 @@
 
   <div class="hud">
     <div class="card">
-      <div>Búsqueda del Tesoro — Sacré Coeur</div>
-      <div>Jugador/a: <span id="playerName">Invitado/a</span> · Progreso <span id="progressCount">0</span>/3</div>
+      <div class="title">Búsqueda del Tesoro — Sacré Coeur</div>
+      <div class="muted">Jugador/a: <span id="playerName">Invitado/a</span> · Progreso <span id="progressCount">0</span>/3</div>
     </div>
-    <button class="btn" id="btnStart">Iniciar</button>
   </div>
 
   <div class="final" id="final">
     <div class="box">
       <h2>🎉 ¡Tesoro encontrado! 🎉</h2>
-      <p>Completaste las 3 pistas. ¡Felicidades!</p>
+      <p>Completaste las 3 pistas.</p>
       <button class="btn" onclick="document.getElementById('final').classList.remove('show')">Cerrar</button>
     </div>
   </div>
 
   <a-scene
     id="scene"
+    vr-mode-ui="enabled:false"
+    renderer="antialias:true; alpha:true; precision:mediump; powerPreference:high-performance"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam; facingMode: environment; detectionMode: mono_and_matrix; debugUIEnabled:false">
+    arjs="trackingMethod: best; sourceType: webcam; facingMode: environment; detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled:false">
     
     <a-assets>
-      <a-asset-item id="treasureModel" src="https://example.com/path/to/your/model.gltf" crossorigin="anonymous"></a-asset-item>
+      <a-asset-item id="trex" src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf" crossorigin="anonymous"></a-asset-item>
     </a-assets>
 
     <a-marker id="m-hiro" preset="hiro" emitevents="true">
@@ -134,7 +129,7 @@
     <a-entity camera></a-entity>
 
     <a-entity id="treasure" visible="false">
-      <a-entity gltf-model="#treasureModel" position="0 0 -2" scale="1.3 1.3 1.3"></a-entity>
+      <a-entity gltf-model="#trex" position="0 0 -2" scale="1.3 1.3 1.3"></a-entity>
     </a-entity>
   </a-scene>
 
@@ -146,19 +141,17 @@
     const markers = ['m-hiro', 'm-kanji', 'm-bar5'];
     const found = new Set();
 
-    function updateProgress() {
+    function updateHUD() {
       $('#progressCount').textContent = found.size;
       if (found.size === markers.length) {
-        $('#treasure').setAttribute('visible', true);
         $('#final').classList.add('show');
       }
     }
 
-    function onMarkerFound(id) {
-      if (!found.has(id)) {
-        found.add(id);
-        updateProgress();
-      }
+    function onFound(id) {
+      if (found.has(id)) return;
+      found.add(id);
+      updateHUD();
     }
 
     const sceneEl = document.getElementById('scene');
@@ -166,14 +159,10 @@
       document.getElementById('loader').style.display = 'none';
     });
 
-    markers.forEach(id => {
+    for (const id of markers) {
       const el = document.getElementById(id);
-      el.addEventListener('markerFound', () => onMarkerFound(id));
-    });
-
-    document.getElementById('btnStart').addEventListener('click', () => {
-      // Start the game logic here if needed
-    });
+      el.addEventListener('markerFound', () => onFound(id));
+    }
   </script>
 </body>
 </html>
