--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="es">
 
 <head>
-   
   <meta charset="utf-8" />
-   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>AR Treasure Hunt — Sacré Coeur</title>
+  <title>AR Treasure Hunt — Sacré Coeur</title>
 
-       
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-   
-  <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.7/aframe/build/aframe-ar.js"></script>
+  <!-- Versiones más estables -->
+  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.7/aframe/build/aframe-ar.min.js"></script>
 
-    <style>
+  <style>
     :root {
       --bg: #0b1020;
       --fg: #e7eefb;
@@ -31,6 +28,7 @@
       font-family: system-ui, Segoe UI, Roboto, Inter, Arial;
       color: var(--fg);
       overflow: hidden;
+      height: 100%;
     }
 
     .arjs-loader {
@@ -47,6 +45,7 @@
       color: #fff;
       font-size: 1.1rem;
       text-align: center;
+      padding: 20px;
     }
 
     .hud {
@@ -126,6 +125,7 @@
       color: #fff;
       font-weight: 600;
       cursor: pointer;
+      margin-top: 8px;
     }
 
     .final {
@@ -151,78 +151,99 @@
       color: #fff;
       text-align: center;
     }
+
+    .error {
+      background: #ef4444;
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+      margin-top: 10px;
+      display: none;
+    }
   </style>
 </head>
 
 <body>
 
-    <div class="arjs-loader" id="loader">
-        <div>Inicializando cámara…<br>Si es la primera vez, acepta el permiso de cámara.</div>
-      </div>
+  <div class="arjs-loader" id="loader">
+    <div>
+      Inicializando cámara…<br>
+      Si es la primera vez, acepta el permiso de cámara.
+      <div class="error" id="errorMsg"></div>
+    </div>
+  </div>
 
-    <div class="hud">
-        <div class="top">
-            <div class="card">
-                <div class="title">Búsqueda del Tesoro — Sacré Coeur</div>
-                <div class="muted">Jugador/a: <span id="playerName">Invitado/a</span> · Progreso <span
+  <div class="hud">
+    <div class="top">
+      <div class="card">
+        <div class="title">Búsqueda del Tesoro — Sacré Coeur</div>
+        <div class="muted">Jugador/a: <span id="playerName">Invitado/a</span> · Progreso <span
             id="progressCount">0</span>/3</div>
-              </div>
-            <div class="card pills">
-                <span class="pill" id="status-m-hiro">Hiro <span class="dot">•</span></span>
-                <span class="pill" id="status-m-kanji">Kanji <span class="dot">•</span></span>
-                <span class="pill" id="status-m-bar5">Barcode 5 <span class="dot">•</span></span>
-                <span class="pill timer" id="timer">00:00</span>
-              </div>
-          </div>
-        <div class="help">
-            <div class="card">
-                <div class="muted">
-                    Apuntá la cámara a los marcadores: <b>Hiro</b>, <b>Kanji</b> y <b>Barcode 5</b>
-                  </div>
-                <button class="btn" id="btnStart">Iniciar</button>
-              </div>
-          </div>
-      </div>
+      </div>
+      <div class="card pills">
+        <span class="pill" id="status-m-hiro">Hiro <span class="dot">•</span></span>
+        <span class="pill" id="status-m-kanji">Kanji <span class="dot">•</span></span>
+        <span class="pill" id="status-m-bar5">Barcode 5 <span class="dot">•</span></span>
+        <span class="pill timer" id="timer">00:00</span>
+      </div>
+    </div>
+    <div class="help">
+      <div class="card">
+        <div class="muted">
+          Apuntá la cámara a los marcadores: <b>Hiro</b>, <b>Kanji</b> y <b>Barcode 5</b>
+        </div>
+        <button class="btn" id="btnStart">Iniciar</button>
+      </div>
+    </div>
+  </div>
 
-    <div class="final" id="final">
-        <div class="box">
-            <h2>🎉 ¡Tesoro encontrado! 🎉</h2>
-            <p>Completaste las 3 pistas en <strong id="finalTime">--:--</strong>.<br />Volvé al inicio para registrar tu
+  <div class="final" id="final">
+    <div class="box">
+      <h2>🎉 ¡Tesoro encontrado! 🎉</h2>
+      <p>Completaste las 3 pistas en <strong id="finalTime">--:--</strong>.<br />Volvé al inicio para registrar tu
         tiempo.</p>
-            <button class="btn" onclick="document.getElementById('final').classList.remove('show')">Cerrar</button>
-          </div>
-      </div>
+      <button class="btn" onclick="document.getElementById('final').classList.remove('show')">Cerrar</button>
+    </div>
+  </div>
 
-    <a-scene     id="scene"     vr-mode-ui="enabled:false"    
-    renderer="antialias:true; alpha:true; precision:mediump; powerPreference:high-performance"     embedded    
-    aarjs="trackingMethod: best; sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled:false">
+  <!-- Configuración corregida de A-Frame y AR.js -->
+  <a-scene id="scene" vr-mode-ui="enabled: false" renderer="logarithmicDepthBuffer: true; antialias: true; alpha: true;"
+    arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;" embedded>
 
-        <a-marker id="m-hiro" preset="hiro" emitevents="true">
-            <a-box color="#f97316" depth="0.3" height="0.3" width="0.3" position="0 0.3 0"></a-box>
-            <a-text value="Pista 1" color="#fff" position="0 0.7 0" scale="0.4 0.4 0.4" align="center"></a-text>
-          </a-marker>
+    <!-- Marcador Hiro -->
+    <a-marker id="m-hiro" type="pattern"
+      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/data/data/patt.hiro"
+      emitevents="true">
+      <a-box color="#f97316" depth="0.3" height="0.3" width="0.3" position="0 0.3 0"></a-box>
+      <a-text value="Pista 1" color="#fff" position="0 0.7 0" scale="0.4 0.4 0.4" align="center"></a-text>
+    </a-marker>
 
-        <a-marker id="m-kanji" preset="kanji" emitevents="true">
-            <a-sphere color="#3b82f6" radius="0.2" position="0 0.3 0"></a-sphere>
-            <a-text value="Pista 2" color="#fff" position="0 0.7 0" scale="0.4 0.4 0.4" align="center"></a-text>
-          </a-marker>
+    <!-- Marcador Kanji -->
+    <a-marker id="m-kanji" type="pattern"
+      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/data/data/patt.kanji"
+      emitevents="true">
+      <a-sphere color="#3b82f6" radius="0.2" position="0 0.3 0"></a-sphere>
+      <a-text value="Pista 2" color="#fff" position="0 0.7 0" scale="0.4 0.4 0.4" align="center"></a-text>
+    </a-marker>
 
-        <a-marker id="m-bar5" type="barcode" value="5" emitevents="true">
-            <a-cone color="#22c55e" position="0 0.3 0" radius-bottom="0.2" radius-top="0.05" height="0.4"></a-cone>
-            <a-text value="Pista 3" color="#fff" position="0 0.7 0" scale="0.4 0.4 0.4" align="center"></a-text>
-          </a-marker>
+    <!-- Marcador Barcode 5 -->
+    <a-marker id="m-bar5" type="barcode" value="5" emitevents="true">
+      <a-cone color="#22c55e" position="0 0.3 0" radius-bottom="0.2" radius-top="0.05" height="0.4"></a-cone>
+      <a-text value="Pista 3" color="#fff" position="0 0.7 0" scale="0.4 0.4 0.4" align="center"></a-text>
+    </a-marker>
 
-        <a-entity id="treasure" visible="false">
-            <a-box color="#f59e0b" depth="0.5" height="0.5" width="0.5" position="0 0.5 0"></a-box>
-            <a-text value="¡TESORO!" color="#f59e0b" position="0 1.2 0" scale="0.6 0.6 0.6" align="center"></a-text>
-          </a-entity>
+    <!-- Tesoro (aparece cuando se completan todos los marcadores) -->
+    <a-entity id="treasure" visible="false">
+      <a-box color="#f59e0b" depth="0.5" height="0.5" width="0.5" position="0 0.5 0"></a-box>
+      <a-text value="¡TESORO!" color="#f59e0b" position="0 1.2 0" scale="0.6 0.6 0.6" align="center"></a-text>
+    </a-entity>
 
-        <a-entity camera></a-entity>
-      </a-scene>
+    <a-entity camera></a-entity>
+  </a-scene>
 
-   
   <script>
     const $ = (s) => document.querySelector(s);
+
     // Obtiene el nombre del jugador de la URL o usa 'Invitado/a'
     const testerName = new URLSearchParams(location.search).get('tester') || 'Invitado/a';
     $('#playerName').textContent = testerName;
@@ -231,15 +252,12 @@
 
     /** Inicia el temporizador. */
     function startTimer() {
-      if (startTs !== null) return; // Ya está iniciado
+      if (startTs !== null) return;
       startTs = Date.now();
       tId = setInterval(() => {
         const s = Math.floor((Date.now() - startTs) / 1000);
-        // CORRECCIÓN: Usar template literals (comillas invertidas `)
         $('#timer').textContent = `${String(Math.floor(s / 60)).padStart(2, '0')}:${String(s % 60).padStart(2, '0')}`;
       }, 250);
-
-      // Oculta el panel de ayuda al iniciar el temporizador (asumiendo que el juego comienza)
       $('#btnStart').closest('.help').style.display = 'none';
     }
 
@@ -273,7 +291,7 @@
 
       found.add(id);
       updateHUD();
-      startTimer(); // Inicia el temporizador si no lo está (al encontrar el primer marcador)
+      startTimer();
 
       if ('vibrate' in navigator) navigator.vibrate(60);
 
@@ -285,7 +303,6 @@
         $('#final').classList.add('show');
 
         try {
-          // Guarda el tiempo en localStorage
           localStorage.setItem('sacre_ar_' + testerName, JSON.stringify({
             done: true,
             time: tt,
@@ -297,15 +314,9 @@
 
     const sceneEl = document.getElementById('scene');
     const loaderEl = document.getElementById('loader');
+    const errorMsg = $('#errorMsg');
 
-    setTimeout(() => {
-      if (loaderEl.style.display !== 'none') {
-        loaderEl.innerHTML = '<div>No se pudo acceder a la cámara. Revisa permisos.</div>';
-      }
-    }, 10000);
-
-
-    // Aseguramos que los eventos de detección de marcadores se registren
+    // Configurar eventos de marcadores
     for (const id of markers) {
       const el = document.getElementById(id);
       if (el) {
@@ -314,11 +325,39 @@
     }
 
     // Manejador para el botón de 'Iniciar'
-    document.getElementById('btnStart').addEventListener('click', () => {
-      startTimer();
+    document.getElementById('btnStart').addEventListener('click', startTimer);
+
+    // Manejar eventos de la escena AR
+    sceneEl.addEventListener('loaded', function () {
+      console.log('Escena AR cargada');
     });
 
-    // Asegura que A-Frame se redimensione correctamente en cambios de tamaño
+    sceneEl.addEventListener('arjs-video-loaded', function () {
+      console.log('Video de cámara cargado');
+      loaderEl.style.display = 'none';
+    });
+
+    sceneEl.addEventListener('error', function (evt) {
+      console.error('Error en AR:', evt.detail);
+      showError('Error técnico: ' + (evt.detail || 'Desconocido'));
+    });
+
+    // Timeout mejorado para la cámara
+    setTimeout(() => {
+      if (loaderEl.style.display !== 'none') {
+        const videoEl = sceneEl.querySelector('video');
+        if (!videoEl || videoEl.readyState < 2) {
+          showError('No se pudo acceder a la cámara. Verifica los permisos y que la cámara no esté en uso por otra aplicación.');
+        }
+      }
+    }, 15000);
+
+    function showError(msg) {
+      errorMsg.textContent = msg;
+      errorMsg.style.display = 'block';
+    }
+
+    // Asegura que A-Frame se redimensione correctamente
     function safeResize() {
       try {
         sceneEl.resize && sceneEl.resize();
@@ -326,6 +365,11 @@
     }
 
     window.addEventListener('resize', () => setTimeout(safeResize, 200));
+
+    // Verificar compatibilidad
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+      showError('Tu navegador no soporta acceso a cámara. Usa Chrome, Firefox o Safari.');
+    }
   </script>
 </body>
 
