--- a/index.html
+++ b/index.html
@@ -180,16 +180,6 @@
       background: #22c55e;
       margin-top: 10px;
     }
-
-    /* Estilos para la escena AR */
-    #scene {
-      position: fixed !important;
-      top: 0 !important;
-      left: 0 !important;
-      width: 100% !important;
-      height: 100% !important;
-      z-index: 1;
-    }
   </style>
 </head>
 
@@ -242,7 +232,7 @@
   </div>
 
   <!-- Escena AR - CONFIGURACIÓN CORREGIDA -->
-  <a-scene id="scene" vr-mode-ui="enabled: false" renderer="colorManagement: true; precision: medium;" embedded>
+  <a-scene id="scene" vr-mode-ui="enabled: false" renderer="colorManagement: true; precision: medium;">
 
     <!-- Marcadores -->
     <a-marker id="m-hiro" preset="hiro" emitevents="true">
@@ -388,7 +378,7 @@
       // --- ¡ESTA ES LA CORRECCIÓN! ---
       // Añadimos el componente AR.js a la escena AHORA,
       // en respuesta al clic del usuario.
-      const arjsAttributes = 'sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;';
+      const arjsAttributes = 'sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;';
       sceneEl.setAttribute('arjs', arjsAttributes);
       // ---------------------------------
     });
